test/cli/test/images/any-attestor/kyverno-test.yaml
name: test-image-any-attestor
policies:
  - policies.yaml
resources:
  - resources.yaml
results:
  - policy: multiple-key-any
    rule: verify-any
    resource: signed
    kind: Pod
    status: pass
  - policy: multiple-key-any
    rule: verify-any
    resource: unsigned
    kind: Pod
    status: fail
